# android_librtmp

./: .gitignore  build.gradle  delete_tmp_file.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Logger.h  bck_RtmpClient_jni_1.cpp.bk  rtmp_client.cpp  rtmp_client.h  rtmp_client_jni.cpp
app/src/main/java/dai/android/media/live/: App.java  MainActivity.kt  RtmpActivity.kt
app/src/main/java/dai/android/media/live/output/: RtmpPublisher.java  VideoPackage.kt
app/src/main/java/dai/android/media/live/rtmp/: RtmpClient.java
app/src/main/res/drawable/: ic_linear_divider.xml
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
libNativeLeak/: build.gradle
libNativeLeak/src/main/: AndroidManifest.xml
libNativeLeak/src/main/cpp/: CMakeLists.txt  android_main.cc  jni_LibraryHook.cc  jni_LibraryHook.hpp  logger.hpp
libNativeLeak/src/main/cpp/core/: Looper.cc  Looper.hpp  safe_queue.hpp
libNativeLeak/src/main/cpp/hook/: Core.cc  Core.hpp  Error.hpp  Stack.cc  Stack.hpp  namespace.hpp
libNativeLeak/src/main/cpp/j4a/: JString.cc  JString.hpp
libNativeLeak/src/main/java/dai/android/leak/: LibraryHook.java
librtmpclient/: build.gradle
librtmpclient/src/main/: AndroidManifest.xml
librtmpclient/src/main/cpp/: CMakeLists.txt  CRtmpClient.cpp  CRtmpClient.hpp  android_main.cpp  jni_rtmp_client.cpp  jvm_loader.hpp  logger.hpp  namespace.hpp
librtmpclient/src/main/cpp/librtmp/: CMakeLists.txt
librtmpclient/src/main/java/dai/android/media/client/rtmp/: PublishConfig.java  RtmpClient.java
